--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="BinduHealth OPD Software by Bindulogic" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>CVit</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
+
+    <link
+      href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="cv.css" />
   </head>
+  
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="../src/index.js" type="text/jsx"></script>
   </body>
 </html>
